--- a/order/src/main/resources/application.yml
+++ b/order/src/main/resources/application.yml
@@ -14,5 +14,6 @@ spring:
   jpa:
     hibernate:
       use-new-id-generator-mappings: 'false'
-      ddl-auto: create
+#      ddl-auto: create
     database-platform: org.hibernate.dialect.Oracle12cDialect
+    show-sql: true
