--- a/order/src/main/resources/application.yml
+++ b/order/src/main/resources/application.yml
@@ -17,3 +17,14 @@ spring:
 #      ddl-auto: create
     database-platform: org.hibernate.dialect.Oracle12cDialect
     show-sql: true
+  kafka:
+    consumer:
+      bootstrap-servers: localhost:9092
+      group-id: order-service
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+    producer:
+      bootstrap-servers: localhost:9092
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
