--- a/order/src/main/resources/application.yml
+++ b/order/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:oracle:thin:@//10.7.2.200:1521/tuyenbd
+    url: jdbc:oracle:thin:@//localhost:1521/ORCLPDB1
     driver-class-name: oracle.jdbc.OracleDriver
     username: orderdb
     password: Tuyen1234
