--- a/dcn-core/pom.xml
+++ b/dcn-core/pom.xml
@@ -43,6 +43,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>com.oracle.database.jdbc</groupId>
+			<artifactId>ojdbc8</artifactId>
+			<version>21.6.0.0.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
