--- a/dcn-core/src/main/resources/application.yml
+++ b/dcn-core/src/main/resources/application.yml
@@ -1,1 +1,25 @@
+spring:
+  datasource:
+    url: jdbc:oracle:thin:@//localhost:1521/ORCLPDB1
+    driver-class-name: oracle.jdbc.OracleDriver
+    username: orderdb
+    password: Tuyen1234
+    hikari:
+      maxLifetime: '2000000'
+      poolName: HikariPoolBooks
+      connectionTimeout: '30000'
+      idleTimeout: '30000'
+      minimumIdle: '5'
+      maximumPoolSize: '20'
+dcn:
+  default-port: 1234
+  registrations:
+    - port: 1234
+      operations:
+        - INSERT
+      associate-query: "select * from order_outbox"
+      row-change-listener: orderOutboxListener
+      before-register-listener: orderOutboxListener
+      after-register-listener: orderOutboxListener
+      query-change: false
 
