--- a/order/src/main/resources/application.yml
+++ b/order/src/main/resources/application.yml
@@ -28,3 +28,6 @@ spring:
       bootstrap-servers: localhost:9092
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
+app:
+  kafka:
+    order-topic: order.order-created
